--- a/AlarmeDeluxe/app/src/main/res/values/strings.xml
+++ b/AlarmeDeluxe/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AlarmeDeluxe</string>
+    <string name="app_name">Deluxe Alarm</string>
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
