--- a/AlarmeDeluxe/app/src/main/res/values/strings.xml
+++ b/AlarmeDeluxe/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="server_client_id">752816531302-pppse353dt09jccnp5k1arvkrf578aa2.apps.googleusercontent.com</string>
+    <string name="server_client_id2">752816531302-sfdbb9v3etfl3fnrp32u9mgpunss3hat.apps.googleusercontent.com</string>
+    <string name="signed_in_fmt">Signed in as: %s</string>
+    <string name="signed_out">Signed out</string>
 </resources>
